[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Craig Mulligan", email = "hey@hobochild.com"},
]
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.11.1",
    "ics>=0.7",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"

[tool.pyright]
extraPaths = ["__pypackages__/3.8/lib/"]
